# wiimote-file-manager

./: .gitignore  CMakeLists.txt  Doxyfile  README.mkd  wiiuse.pc.in
src/: CMakeLists.txt  main.c  wpf_handler.c  wpf_handler.h
